# creative-ai

./: .gitignore  README.md
quest-generator/: Readme.md
quest-generator/app/console/: pyproject.toml
quest-generator/app/console/src/quest_generator/: main.py
quest-generator/app/web/: Dockerfile  README.md  requirements.txt
quest-generator/app/web/docs/: heroku_app.md
quest-generator/app/web/src/: app.py  config.yaml
quest-generator/app/web/src/static/: index.html
quest-generator/app/web/src/static/js/: main.jsx
quest-generator/data/assets/: entities.json
quest-generator/data/quests/: quest_objectives.csv  quest_objectives_entities.csv  skyrim_quests.json  witcher_contracts.json  witcher_hunts.json  witcher_quests.json  witcher_side_quests.json
quest-generator/src/: 00-crawl_quests.ipynb  00-get_skyrim_quests_xml.ipynb  01-get_quests_api.ipynb  02-generate_objectives_dataset.ipynb  03-gpt2_lm.ipynb  03a-extract_entities.ipynb  03b-umlfit.ipynb
songwriter/: Readme.md
songwriter/app/: Dockerfile  heroku_web_deploy.sh  requirements.txt
songwriter/app/src/: app.py  song_interpolation.py
songwriter/app/src/autoencoder/: batchify.py  model.py  trained_model.py
songwriter/src/: 01-get_data.ipynb  02-build_dataset.ipynb  02b-build_dataset_dl.ipynb  03-build_model.ipynb  04-autoencoder.ipynb  05-song_space_plot.ipynb  06-song_interpolation.ipynb
